# term-painter

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deploy.sh
examples/: custom.rs  main.rs
src/: lib.rs
