[package]
name = "term-painter"
version = "0.2.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

description = "Coloring and formatting terminal output"
documentation = "https://lukaskalbertodt.github.io/term-painter/term_painter/"
repository = "https://github.com/LukasKalbertodt/term-painter"
license = "MIT"
keywords = ["terminal", "color", "format", "paint"]

[dependencies]
term = "*"
