[package]
name = "term-painter"
version = "0.2.4"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

description = "Coloring and formatting terminal output"
documentation = "https://docs.rs/term-painter/"
repository = "https://github.com/LukasKalbertodt/term-painter"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["terminal", "color", "format", "paint"]
categories = ["command-line-interface"]

[badges]
travis-ci = { repository = "LukasKalbertodt/term-painter" }

[dependencies]
term = "0.4"
