[package]
name = "term-painter"
version = "0.3.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

description = "Coloring and formatting terminal output"
documentation = "https://docs.rs/term-painter/"
repository = "https://github.com/LukasKalbertodt/term-painter"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["terminal", "color", "format", "paint"]
categories = ["command-line-interface"]

[dependencies]
term = "0.6"
